--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
     "test": "tests"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node src/build.js"
   },
   "author": "Shawn McKay <shawn.j.mckay@gmail.com>",
   "license": "ISC",
   "devDependencies": {
     "chai": "^3.4.1",
-    "lodash": "^4.0.0",
     "mocha": "^2.3.4"
   }
 }
