--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./src/build.js coderoad.json ./src/README.md"
+    "start": "node ./src/build.js coderoad.json"
   },
   "author": "Shawn McKay <shawn.j.mckay@gmail.com>",
   "license": "ISC"
