--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "coderoad": "cli.js"
   },
   "dependencies": {
-    "chalk": "^1.1.1",
-    "commander": "^2.9.0"
+    "chalk": "1.1.1",
+    "commander": "2.9.0",
+    "lodash": "4.0.1",
+    "validate-npm-package-name": "^2.2.2"
   }
 }
