--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
   "dependencies": {
     "chalk": "1.1.1",
     "commander": "2.9.0",
-    "lodash": "4.0.1",
-    "validate-npm-package-name": "^2.2.2"
+    "lodash": "4.0.1"
   }
 }
