--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "coderoad-cli",
   "version": "0.1.0",
   "description": "Command line interface for CodeRoad. Build project files.",
+  "keywords": ["coderoad"],
   "directories": {
     "test": "tests"
   },
@@ -17,6 +18,6 @@
   "dependencies": {
     "chalk": "1.1.1",
     "commander": "2.9.0",
-    "lodash": "4.0.1"
+    "lodash": "4.2.1"
   }
 }
