--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "coderoad-cli",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "Command line interface for CodeRoad. Build project files.",
-  "keywords": ["coderoad"],
+  "keywords": [
+    "coderoad"
+  ],
   "directories": {
     "test": "tests"
   },
@@ -19,5 +21,9 @@
     "chalk": "1.1.1",
     "commander": "2.9.0",
     "lodash": "4.2.1"
+  },
+  "devDependencies": {
+    "chai": "3.5.0",
+    "mocha": "2.4.5"
   }
 }
