--- a/src/create/setup/package.json
+++ b/src/create/setup/package.json
@@ -10,7 +10,7 @@
   "devDependencies": {},
   "license": "MIT",
   "coderoad": {
-    "testDir": "test",
+    "testDir": "tutorial",
     "testSuffix": ".spec.js"
   }
 }
