--- a/src/create/setup/package.json
+++ b/src/create/setup/package.json
@@ -5,7 +5,7 @@
   "author": "",
   "contributers": [],
   "main": "coderoad.json",
-  "keywords": ["coderoad"],
+  "keywords": ["coderoad", "tutorial"],
   "dependencies": {},
   "devDependencies": {},
   "license": "MIT",
