--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "coderoad-cli",
-  "version": "0.3.12",
+  "version": "0.3.13",
   "description": "Command line interface for CodeRoad. Build project files.",
   "keywords": [
     "coderoad"
@@ -20,8 +20,8 @@
   "dependencies": {
     "chalk": "1.1.1",
     "commander": "2.9.0",
-    "lodash": "4.2.1",
-    "prompt": "^0.2.14"
+    "lodash": "4.5.0",
+    "prompt": "1.0.0"
   },
   "devDependencies": {
     "chai": "3.5.0",
