--- a/src/create/setup/package.json
+++ b/src/create/setup/package.json
@@ -2,15 +2,24 @@
   "name": "coderoad-package-name",
   "version": "0.1.0",
   "description": "Coderoad tutorial",
-  "author": "",
+  "author": "Name <email> (site)",
   "contributers": [],
   "main": "coderoad.json",
+  "files": [
+    "coderoad.json",
+    "tutorial"
+  ],
   "keywords": ["coderoad", "tutorial"],
-  "dependencies": {},
-  "devDependencies": {},
+  "engines": {
+    "node" : ">=0.10.3"
+  },
+  "dependencies": {
+    "mocha-coderoad": "^0.3.1"
+  },
   "license": "MIT",
-  "coderoad": {
+  "config": {
     "testDir": "tutorial",
-    "testSuffix": ".spec.js"
+    "testSuffix": ".spec.js",
+    "testRunner": "mocha-coderoad"
   }
 }
