--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "coderoad-cli",
-  "version": "0.3.15",
+  "version": "0.3.16",
   "description": "Command line interface for CodeRoad. Build project files.",
   "keywords": [
     "coderoad"
@@ -15,8 +15,14 @@
   "license": "ISC",
   "preferGlobal": true,
   "bin": {
-    "coderoad": "cli.js"
+    "coderoad": "lib/cli.js"
   },
+  "files": [
+    "lib",
+    "package.json",
+    "README.md",
+    "LICENSE.md"
+  ],
   "dependencies": {
     "chalk": "1.1.1",
     "commander": "2.9.0",
