--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,6 @@
   ],
   "files": [
     "src/cli.ts",
-    "src/typings.d.ts",
     "src/build/build.ts",
     "src/build/parser/actions.ts",
     "src/build/parser/chapter.ts",
@@ -29,17 +28,17 @@
     "src/create/create.ts",
     "src/create/validate.ts",
     "src/create/write-demo.ts",
-    "src/docs/docs.ts",
     "src/list/list.ts",
     "src/publish/publish.ts",
     "src/publish/validate.ts",
-    "src/run/run.ts",
     "src/search/search.ts",
     "src/search/validate.ts",
     "src/tools/file.ts",
     "src/tutorials/tutorials.ts",
     "src/typings/chalk/chalk.d.ts",
     "src/typings/commander/commander.d.ts",
+    "src/typings/cr.d.ts",
+    "src/typings/globals.d.ts",
     "src/typings/node/node.d.ts",
     "src/typings/prompt/prompt.d.ts",
     "src/typings/tsd.d.ts"
