--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,9 +20,9 @@
     "src/build/parser/chapter.ts",
     "src/build/parser/cleanup.ts",
     "src/build/parser/import.ts",
+    "src/build/parser/info.ts",
     "src/build/parser/match.ts",
     "src/build/parser/page.ts",
-    "src/build/parser/project.ts",
     "src/build/parser/task.ts",
     "src/build/readme.ts",
     "src/build/validators.ts",
