minor fixes/updates

--- a/setup/package.json
+++ b/setup/package.json
@@ -19,7 +19,7 @@
   "license": "MIT",
   "config": {
     "dir": "tutorial",
-    "testSuffix": ".spec.js",
-    "runner": "mocha-coderoad"
+    "runner": "mocha-coderoad",
+    "testSuffix": ".spec.js"
   }
 }
