--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "coderoad-cli",
-  "version": "0.4.2",
+  "version": "0.5.0",
   "description": "Command line interface for CodeRoad. Build project files.",
   "keywords": [
     "coderoad"
@@ -26,7 +26,7 @@
   "dependencies": {
     "chalk": "1.1.3",
     "commander": "2.9.0",
-    "lodash": "4.11.1",
+    "lodash.kebabcase": "4.0.1",
     "prompt": "1.0.0",
     "validate-npm-package-name": "2.2.2"
   },
