--- a/package.json
+++ b/package.json
@@ -1,37 +1,38 @@
 {
-  "name": "coderoad-cli",
-  "version": "0.6.0",
-  "description": "Command line interface for CodeRoad. Build project files.",
-  "keywords": [
-    "coderoad"
-  ],
-  "directories": {
-    "test": "test"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Shawn McKay <shawn.j.mckay@gmail.com>",
-  "license": "ISC",
-  "preferGlobal": true,
-  "bin": {
-    "coderoad": "lib/cli.js"
-  },
-  "files": [
-    "setup",
-    "lib",
-    "package.json",
-    "*.md"
-  ],
-  "dependencies": {
-    "chalk": "1.1.3",
-    "commander": "2.9.0",
-    "lodash.kebabcase": "4.0.1",
-    "prompt": "1.0.0",
-    "validate-npm-package-name": "2.2.2"
-  },
-  "devDependencies": {
-    "chai": "3.5.0",
-    "mocha": "2.5.3"
-  }
+    "name": "coderoad-cli",
+    "version": "0.6.0",
+    "description": "Command line interface for CodeRoad. Build project files.",
+    "keywords": [
+        "coderoad"
+    ],
+    "directories": {
+        "test": "test"
+    },
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "author": "Shawn McKay <shawn.j.mckay@gmail.com>",
+    "license": "ISC",
+    "preferGlobal": true,
+    "bin": {
+        "coderoad": "lib/cli.js"
+    },
+    "files": [
+        "setup",
+        "lib",
+        "package.json",
+        "*.md"
+    ],
+    "dependencies": {
+        "chalk": "1.1.3",
+        "commander": "2.9.0",
+        "lodash.kebabcase": "4.0.1",
+        "prompt": "1.0.0",
+        "sort-package-json": "^1.4.0",
+        "validate-npm-package-name": "2.2.2"
+    },
+    "devDependencies": {
+        "chai": "3.5.0",
+        "mocha": "2.5.3"
+    }
 }
