init tutorial search logic, rely on node-file-exists

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,8 +36,10 @@
         "src/publish/validate.ts",
         "src/search/index.ts",
         "src/search/validate.ts",
-        "src/tools/file.ts",
+        "src/tutorials/find-tutorials.ts",
         "src/tutorials/index.ts",
+        "src/tutorials/is-tutorial.ts",
+        "src/tutorials/update.ts",
         "src/typings/chalk/chalk.d.ts",
         "src/typings/commander/commander.d.ts",
         "src/typings/cr.d.ts",
