--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
         "*.md"
     ],
     "dependencies": {
+        "atom-plugin-command-line": "1.0.2",
         "chalk": "1.1.3",
         "commander": "2.9.0",
         "lodash.kebabcase": "4.0.1",
+        "node-file-exists": "1.1.0",
         "prompt": "1.0.0",
         "sort-package-json": "^1.4.0",
         "validate-npm-package-name": "2.2.2"
