--- a/package.json
+++ b/package.json
@@ -1,40 +1,41 @@
 {
-    "name": "coderoad-cli",
-    "version": "0.6.0",
-    "description": "Command line interface for CodeRoad. Build project files.",
-    "keywords": [
-        "coderoad"
-    ],
-    "directories": {
-        "test": "test"
-    },
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "author": "Shawn McKay <shawn.j.mckay@gmail.com>",
-    "license": "ISC",
-    "preferGlobal": true,
-    "bin": {
-        "coderoad": "lib/cli.js"
-    },
-    "files": [
-        "setup",
-        "lib",
-        "package.json",
-        "*.md"
-    ],
-    "dependencies": {
-        "atom-plugin-command-line": "1.0.2",
-        "chalk": "1.1.3",
-        "commander": "2.9.0",
-        "lodash.kebabcase": "4.0.1",
-        "node-file-exists": "1.1.0",
-        "prompt": "1.0.0",
-        "sort-package-json": "^1.4.0",
-        "validate-npm-package-name": "2.2.2"
-    },
-    "devDependencies": {
-        "chai": "3.5.0",
-        "mocha": "2.5.3"
-    }
+  "name": "coderoad-cli",
+  "version": "0.6.0",
+  "description": "Command line interface for CodeRoad. Build project files.",
+  "keywords": [
+    "coderoad"
+  ],
+  "license": "ISC",
+  "author": "Shawn McKay <shawn.j.mckay@gmail.com>",
+  "files": [
+    "setup",
+    "lib",
+    "package.json",
+    "*.md"
+  ],
+  "main": "lib/index.js",
+  "bin": {
+    "coderoad": "lib/cli.js"
+  },
+  "directories": {
+    "test": "test"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "dependencies": {
+    "atom-plugin-command-line": "1.0.2",
+    "chalk": "1.1.3",
+    "commander": "2.9.0",
+    "lodash.kebabcase": "4.0.1",
+    "node-file-exists": "1.1.0",
+    "prompt": "1.0.0",
+    "sort-package-json": "^1.4.0",
+    "validate-npm-package-name": "2.2.2"
+  },
+  "devDependencies": {
+    "chai": "3.5.0",
+    "mocha": "2.5.3"
+  },
+  "preferGlobal": true
 }
