fix tutorial list bug if no pj.main

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,7 +31,6 @@
         "src/create/index.ts",
         "src/create/validate.ts",
         "src/create/write-demo.ts",
-        "src/list/list.ts",
         "src/packageJson/get.ts",
         "src/publish/index.ts",
         "src/publish/validate.ts",
@@ -41,11 +40,13 @@
         "src/tutorials/index.ts",
         "src/tutorials/is-tutorial.ts",
         "src/tutorials/update.ts",
+        "src/typings/atom-plugin-command-line/index.d.ts",
         "src/typings/chalk/chalk.d.ts",
         "src/typings/commander/commander.d.ts",
         "src/typings/cr.d.ts",
         "src/typings/es6-promise/es6-promise.d.ts",
         "src/typings/globals.d.ts",
+        "src/typings/node-file-exists/index.d.ts",
         "src/typings/node/node.d.ts",
         "src/typings/prompt/prompt.d.ts",
         "src/typings/tsd.d.ts",
