--- a/tsconfig.json
+++ b/tsconfig.json
@@ -44,11 +44,18 @@
         "src/typings/chalk/chalk.d.ts",
         "src/typings/commander/commander.d.ts",
         "src/typings/cr.d.ts",
+        "src/typings/cr/cli.d.ts",
+        "src/typings/cr/core.d.ts",
+        "src/typings/cr/cr.d.ts",
+        "src/typings/cr/globals.d.ts",
+        "src/typings/cr/test.d.ts",
+        "src/typings/cr/tutorial.d.ts",
         "src/typings/es6-promise/es6-promise.d.ts",
         "src/typings/globals.d.ts",
         "src/typings/node-file-exists/index.d.ts",
         "src/typings/node/node.d.ts",
         "src/typings/prompt/prompt.d.ts",
+        "src/typings/sort-package-json/index.d.ts",
         "src/typings/tsd.d.ts",
         "src/update/index.ts"
     ],
