--- a/tsconfig.json
+++ b/tsconfig.json
@@ -57,7 +57,8 @@
         "src/typings/prompt/prompt.d.ts",
         "src/typings/sort-package-json/index.d.ts",
         "src/typings/tsd.d.ts",
-        "src/update/index.ts"
+        "src/update/index.ts",
+        "src/validate/name.ts"
     ],
     "exclude": [
         "node_modules"
