--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "coderoad-cli",
-  "version": "0.7.1",
+  "version": "0.8.0",
   "description": "Command line interface for CodeRoad. Build project files.",
   "keywords": [
     "coderoad"
   ],
+  "homepage": "https://github.com/coderoad/coderoad-cli#readme",
+  "bugs": {
+    "url": "https://github.com/coderoad/coderoad-cli/issues"
+  },
   "license": "ISC",
   "author": "Shawn McKay <shawn.j.mckay@gmail.com>",
   "files": [
@@ -20,6 +24,10 @@
   "directories": {
     "test": "test"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/coderoad/coderoad-cli.git"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -27,7 +35,7 @@
     "atom-plugin-command-line": "1.0.2",
     "chalk": "1.1.3",
     "commander": "2.9.0",
-    "lodash.kebabcase": "4.0.1",
+    "lodash.kebabcase": "4.1.0",
     "node-file-exists": "1.1.0",
     "prompt": "1.0.0",
     "sort-package-json": "^1.4.0",
@@ -35,7 +43,7 @@
   },
   "devDependencies": {
     "chai": "3.5.0",
-    "mocha": "2.5.3"
+    "mocha": "3.0.2"
   },
   "preferGlobal": true
 }
